# AIComputer

./: .gitignore  LINKEDIN_VOICE_CODEX.md  LINKEDIN_VOICE_CODEX_EN.md  PLAN_AI_VOICE_CODEX.md  README.md  pyproject.toml
config/: voice-codex.example.toml
scripts/: install-hypr-binding  install-skills  voice-codex  voice-codex-ask  voice-codex-doctor  voice-codex-toggle
src/voice_codex/: __init__.py  app.py  ask.py  audit.py  codex_client.py  config.py  doctor.py  handy_bridge.py  ipc.py  memory.py  paths.py  screen_context.py  skills.py  stt.py  toggle.py  tts.py
systemd/: voice-codex.service
tests/: test_config.py  test_handy_bridge.py  test_ipc_paths.py  test_memory.py  test_screen_context.py  test_stt.py
